src/objects/CH_EmailAlert__c.object
<CustomObject>
    <description>NOKIASC-30632</description>
    <fields>
        <fullName>CH_Bind10__c</fullName>
        <description>NOKIASC-30632</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Bind11__c</fullName>
        <description>NOKIASC-30632</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Bind12__c</fullName>
        <description>NOKIASC-30632</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_BindEmail1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CH_BindEmail2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CH_BindEmail3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CH_Bind_16__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind 16</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Bind_17__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Bind 17</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_EmailAlertName__c</fullName>
        <description>NOKIASC-30632</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CH Email Alert Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CH Email Alert</label>
    <nameField>
        <displayFormat>CHE{000000}</displayFormat>
        <label>CH Email Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH Email Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>